switched to default run behavior for powershell script

--- a/.github/workflows/msslq.yml
+++ b/.github/workflows/msslq.yml
@@ -11,4 +11,5 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: install iis
-        run: PowerShell.exe -File install.ps1
+        run: |
+          ./install.ps1
